--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "esno src/index.ts",
+    "interactive": "esno src/index.ts --interactive",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
