--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "esno src/index.ts --interactive",
-    "timer": "esno src/index.ts",
+    "timer": "caffeinate & esno src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
